--- a/package.json
+++ b/package.json
@@ -11,58 +11,58 @@
     "build": "node build/build.js"
   },
   "dependencies": {
-    "highcharts": "^6.0.4",
-    "lodash": "^4.17.4",
-    "vue": "^2.5.2",
-    "vue-highcharts-v5": "^1.0.3",
-    "vue-router": "^3.0.1"
+    "highcharts": "latest",
+    "lodash": "latest",
+    "vue": "latest",
+    "vue-highcharts-v5": "^1.0.4",
+    "vue-router": "latest"
   },
   "devDependencies": {
-    "autoprefixer": "^7.1.2",
-    "babel-core": "^6.22.1",
-    "babel-eslint": "^8.2.1",
-    "babel-helper-vue-jsx-merge-props": "^2.0.3",
-    "babel-loader": "^7.1.1",
-    "babel-plugin-syntax-jsx": "^6.18.0",
-    "babel-plugin-transform-runtime": "^6.22.0",
-    "babel-plugin-transform-vue-jsx": "^3.5.0",
-    "babel-preset-env": "^1.3.2",
-    "babel-preset-stage-2": "^6.22.0",
-    "chalk": "^2.0.1",
-    "copy-webpack-plugin": "^4.0.1",
-    "css-loader": "^0.28.0",
-    "eslint": "^4.15.0",
-    "eslint-config-standard": "^10.2.1",
-    "eslint-friendly-formatter": "^3.0.0",
-    "eslint-loader": "^1.7.1",
-    "eslint-plugin-import": "^2.7.0",
-    "eslint-plugin-node": "^5.2.0",
-    "eslint-plugin-promise": "^3.4.0",
-    "eslint-plugin-standard": "^3.0.1",
-    "eslint-plugin-vue": "^4.0.0",
-    "extract-text-webpack-plugin": "^3.0.0",
-    "file-loader": "^1.1.4",
-    "friendly-errors-webpack-plugin": "^1.6.1",
-    "html-webpack-plugin": "^2.30.1",
-    "node-notifier": "^5.1.2",
-    "optimize-css-assets-webpack-plugin": "^3.2.0",
-    "ora": "^1.2.0",
-    "portfinder": "^1.0.13",
-    "postcss-import": "^11.0.0",
-    "postcss-loader": "^2.0.8",
-    "postcss-url": "^7.2.1",
-    "rimraf": "^2.6.0",
-    "semver": "^5.3.0",
-    "shelljs": "^0.7.6",
-    "uglifyjs-webpack-plugin": "^1.1.1",
-    "url-loader": "^0.5.8",
-    "vue-loader": "^13.3.0",
-    "vue-style-loader": "^3.0.1",
-    "vue-template-compiler": "^2.5.2",
-    "webpack": "^3.6.0",
-    "webpack-bundle-analyzer": "^2.9.0",
-    "webpack-dev-server": "^2.9.1",
-    "webpack-merge": "^4.1.0"
+    "autoprefixer": "^7.2.6",
+    "babel-core": "latest",
+    "babel-eslint": "^8.2.6",
+    "babel-helper-vue-jsx-merge-props": "latest",
+    "babel-loader": "^7.1.5",
+    "babel-plugin-syntax-jsx": "latest",
+    "babel-plugin-transform-runtime": "latest",
+    "babel-plugin-transform-vue-jsx": "latest",
+    "babel-preset-env": "latest",
+    "babel-preset-stage-2": "latest",
+    "chalk": "latest",
+    "copy-webpack-plugin": "latest",
+    "css-loader": "^0.28.11",
+    "eslint": "^4.19.1",
+    "eslint-config-standard": "10.2.1",
+    "eslint-friendly-formatter": "3.0.0",
+    "eslint-loader": "^1.9.0",
+    "eslint-plugin-import": "latest",
+    "eslint-plugin-node": "^5.2.1",
+    "eslint-plugin-promise": "^3.8.0",
+    "eslint-plugin-standard": "^3.1.0",
+    "eslint-plugin-vue": "latest",
+    "extract-text-webpack-plugin": "latest",
+    "file-loader": "^1.1.11",
+    "friendly-errors-webpack-plugin": "latest",
+    "html-webpack-plugin": "2.30.1",
+    "node-notifier": "latest",
+    "optimize-css-assets-webpack-plugin": "3.2.0",
+    "ora": "^1.4.0",
+    "portfinder": "latest",
+    "postcss-import": "^11.1.0",
+    "postcss-loader": "^2.1.6",
+    "postcss-url": "^7.3.2",
+    "rimraf": "latest",
+    "semver": "latest",
+    "shelljs": "^0.7.8",
+    "uglifyjs-webpack-plugin": "^1.3.0",
+    "url-loader": "^0.5.9",
+    "vue-loader": "^13.7.3",
+    "vue-style-loader": "^3.1.2",
+    "vue-template-compiler": "latest",
+    "webpack": "^3.12.0",
+    "webpack-bundle-analyzer": "^2.13.1",
+    "webpack-dev-server": "^2.11.3",
+    "webpack-merge": "latest"
   },
   "engines": {
     "node": ">= 6.0.0",
